v0.5.3, 2016-07-?? -- ???
 * runners:
   * EMR:
     * determine cause of failure of bootstrap scripts (#370)
       * master bootstrap script now redirects stdout to stderr
 * .cpython-3x.pyc files no longer included when bootstrapping mrjob

v0.5.2, 2016-05-23 -- initial Cloud Dataproc support
 * basic support for Google Cloud Dataproc (#1243)
   * lacks log interpretation, JarStep support
 * on EMR, wait for steps to complete in correct order (#1316)
 * correctly handle ~ in include path in mrjob.conf (#1308)
 * new emr_applications option (#1293)
 * fix running deprecated tools with python -m (#1312)
 * fix ssh tunneling to 2.x AMIs on EMR in VPCs (#1311)

v0.5.1, 2016-04-29 -- post-release bugfixes
 * strict_protocols in mrjob.conf is no longer ignored (#1302)
 * check_input_paths in mrjob.conf is no longer ignored
 * partitioner() is no longer ignored, fixing SORT_VALUES (#1294)
   * --partitioner switch is deprecated
 * improved probable cause of error from pre-YARN logs (#1288)
 * ssh_bind_ports now defaults to (x)range, not list (#1284)
 * mrjob terminate-idle-clusters handles debugging jar from boto 2.40.0 (#1306)

v0.5.0, 2016-03-28 -- the future is in the past
 * supports Python 3 (#989)
 * requires boto 2.35.0 or newer (#980)
   * removed many workarounds for S3 and EMR (#980), IAM (#1062)
 * jobs:
   * is_mapper_or_reducer() is now is_task() (#1072)
   * mr() no longer takes positional arguments (#814)
   * removed jar() (use mrjob.step.JarStep)
   * removed testing methods parse_counters() and parse_output()
   * protocols:
     * protocols are strict by default (#724)
     * JSON protocols use ujson when available, then simplejson (#1002, #1266)
       * can explicitly choose Standard, Simple or Ultra JSON protocol
     * raw protocols handle bytes or unicode depending on Python version
       * can explicitly choose Text or Bytes protocol
   * mrjob.step:
      * JarStep only takes "args" and "main_class" keyword args